# HomeUpdater

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
02_التطوير/backend/: HomeUpdater.spec  app_window.py  launcher.py  loading.html  pyproject.toml  requirements.txt  service.py  tray.py
02_التطوير/backend/alembic/: env.py
02_التطوير/backend/alembic/versions/: 2531d17a2b88_host_key_winrm_verify_tls.py  52a312bdadb3_ssh_hosts_table.py  60df94c429f7_winrm_hosts_table.py  7654c9a7ec10_cve_cache_table.py  7fb57970bedf_ha_config_table.py  (+2 more)
02_التطوير/backend/app/: __init__.py  config.py  crypto.py  db.py  logging_setup.py  main.py  win_elevation.py
02_التطوير/backend/tests/: conftest.py  test_adaptive_persistence.py  test_adaptive_timeout.py  test_advisor.py  test_advisor_loop.py  test_android.py  test_auth.py  test_auth_hardening.py  test_classify.py  test_critical_hardening.py  test_crypto.py  test_cve.py  test_cve_throttle.py  test_devices_mac_migration.py  test_devices_scan.py  test_discovery_budget.py  test_discovery_python.py  test_endpoint_timeouts.py  test_fastwins.py  test_homeassistant.py  test_homeassistant_timeouts.py  test_mac_vendor.py  test_migrations.py  test_notifications.py  test_persist_reconcile.py  test_platform_fixes.py  test_ports.py  test_progress.py  test_scheduler.py  test_security.py  test_settings.py  test_smoke.py  test_software_classify.py  test_software_run.py  test_ssh.py  test_static_cache.py  test_support_assistant.py  test_updates.py  test_version_state.py  test_winget_parser.py  (+1 more)
(+124 files in other folders)
